FIND_PACKAGE(Java REQUIRED)
FIND_PACKAGE(JNI REQUIRED)
INCLUDE(UseJava)

INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
IF (DISABLE_SWIG)
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/interface DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

ELSE(DISABLE_SWIG)
#Enable generation using swig
INCLUDE(UseSWIG)
SET_PROPERTY(SOURCE helicsJava.i PROPERTY SWIG_MODULE_NAME JNIhelics)

set(CMAKE_SWIG_FLAGS "-package;com.java.helics")
IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} VERSION_GREATER 3.7)
  SWIG_ADD_LIBRARY(JNIhelics TYPE MODULE LANGUAGE java SOURCES helicsJava.i)
ELSE ()
  SWIG_ADD_MODULE(JNIhelics java helicsJava.i)
ENDIF ()

SWIG_LINK_LIBRARIES(JNIhelics helicsSharedLib)
SWIG_LINK_LIBRARIES(JNIhelics ${JAVA_LIBRARIES})


set_target_properties (JNIhelics PROPERTIES FOLDER interfaces)

if (APPLE)

    # SET_TARGET_PROPERTIES(helicsSharedLib PROPERTIES MACOSX_RPATH TRUE)
    # SET_TARGET_PROPERTIES(helicsSharedLib PROPERTIES CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

    # SET_TARGET_PROPERTIES(_helics PROPERTIES MACOSX_RPATH TRUE)
    # SET_TARGET_PROPERTIES(_helics PROPERTIES CMAKE_INSTALL_RPATH_USE_LINK_PATH
    # SET_TARGET_PROPERTIES(helics PROPERTIES INSTALL_RPATH "@loader_path/../../..")

else()

    # SET_TARGET_PROPERTIES(_helics PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
    # SET_TARGET_PROPERTIES(_helics PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)

endif()

ENDIF(DISABLE_SWIG)



configure_file(${PROJECT_SOURCE_DIR}/config/MakeJarCMakeLists.txt.in ${CMAKE_CURRENT_BINARY_DIR}/CMakeLists.txt @ONLY)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/buildjar/)

# -D ADDITIONAL_JAR_FILES=$<TARGET_FILE:helicsSharedLib>;$<TARGET_FILE:JNIhelics>
ADD_CUSTOM_COMMAND(
    TARGET "JNIhelics" POST_BUILD
    COMMAND ${CMAKE_COMMAND} -D LIBRARY_FILE=$<TARGET_FILE:JNIhelics> -P ${CMAKE_CURRENT_SOURCE_DIR}/addLoadLibraryCommand.cmake
)

ADD_CUSTOM_COMMAND(
    TARGET "JNIhelics" POST_BUILD 
    COMMAND ${CMAKE_COMMAND} 
	ARGS ..
    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/buildjar"
	VERBATIM
)

ADD_CUSTOM_COMMAND(
    TARGET "JNIhelics" POST_BUILD
    COMMAND ${CMAKE_COMMAND} 
	ARGS  --build . --target helics
    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/buildjar/"
    COMMENT "Building jar file" 
	VERBATIM
)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/buildjar/helics.jar DESTINATION java)
INSTALL(FILES $<TARGET_FILE:helicsSharedLib> DESTINATION java)
INSTALL(TARGETS JNIhelics DESTINATION java)
INSTALL(FILES ${KEY_LIBRARY_FILES} DESTINATION java)
